upgraded to new EAP version